# code-challenge

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  SOLUTIONS.md
.github/workflows/: ci-cd.yml  cloud-run-test-deploy.yml
deploy/: .terraform.lock.hcl  main.tf  variables.tf
helm/code-challenge/: Chart.yaml  values.yaml
helm/code-challenge/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/code-challenge/templates/tests/: test-connection.yaml
src/: handlers.rs  lib.rs  main.rs  router.rs  test.rs
