[package]
name = "code-challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "2.0.1", features = ["test"] }
tracing = "0.1"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.11", features = [
    "fmt",
    "json",
    "env-filter",
] }
serde_json = "1.0"
serde = "1.0"
convert_case = "0.5.0"
